--- a/app/views/follows/_followbtn_client.html.erb
+++ b/app/views/follows/_followbtn_client.html.erb
@@ -2,11 +2,15 @@
   <% if current_client.follow?(profile) %>
     <%= link_to 'Siguiendo', unfollow_path(profile_id: profile.id), remote: true,id:"follow", class:"follow_btn hidden-xs", method: :delete %>
   <% else %>
-    <%= button_to "Seguir", follow_path(profile_id: profile.id), class:"follow_btn hidden-xs",  remote: true, id:"follow" do %>
-      <%= icon("plus") %>
-    <% end %>
+    <%= button_to "Seguir", follow_path(profile_id: profile.id), class:"follow_btn hidden-xs",  remote: true, id:"follow" %>
   <% end %>
 
 <% else %>
-  <%= link_to "Seguir", new_client_session_path, notice:'Debes iniciar seción', class:"follow_btn hidden-xs" %>
+		
+		<% if user_signed_in? %>
+			<% if current_user.id == @profile.user_id %>
+				<%= link_to "Editar", edit_profile_path(@profile), notice:'Debes iniciar seción', class:"follow_btn hidden-xs" %>				
+			<% end %>
+		<% end %>
+
 <% end %>
