--- a/app/views/markets/show.html.erb
+++ b/app/views/markets/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h5><%= @market.title %></h5>
+  <div class="page-header"><b><h3><%= @market.title %></h3></b></div>
   <% unless @market.items.any? %>
   <div class="center">
     <h4>¡Vaya!</h4>
