--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="container grey-text darken-4">
-  <h5>Editar Publicación</h5>
-
-  <%= render 'form_nomodal' %>
+	<div class="page-header">
+		<h3>Editar Publicación</h3>
+	</div>
+  <%= render 'form' %>
 
   <%= link_to 'Volver', root_path %> |
 </div>
