--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
-<h5>New Post</h5>
+	<div class="page-header">
+		<h3>New Post</h3>
+	</div>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
 </div>
