--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -1,39 +1,55 @@
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-<div class="container" style="margin-top: 20px; margin-bottom: 20px;">
+<div class="container" style="margin-bottom: 20px;">
   <div class="row panel">
-    <div class="col-md-4 bg_blur" style="    background-image:url('<%= @profile.cover.url() %>');
+    <div class="col-md-4 bg_blur" style="background-image:url('<%= @profile.cover.url() %>');
       ">
       <!--a href="#" class="follow_btn hidden-xs">Follow</a-->
       <%= render partial:'/follows/followbtn_client', locals:{profile: @profile} %>
     </div>
-    <div class="col-md-8  col-xs-12">
-      <%= image_tag(@profile.cover, class:"img-thumbnail picture hidden-xs") %>
+    <div class="col-md-8 col-xs-12">
+      <%= image_tag(@profile.avatar, class:"img-thumbnail picture hidden-xs") %>
       <%= image_tag(@profile.avatar, class:"img-thumbnail visible-xs picture_mob") %>
       <div class="header">
         <h1><%= @profile.name %></h1>
         <div class="star-rating" data-score= <%= @profile.reviews.average(:rating) %> ></div>
-        <span><%= @profile.body %></span>
+        <p>
+          <% if reviewed?(@profile) %>
+              <em><b>Basado en <%= @profile.reviews.count %> calificaciones</b></em>
+            <% else %>
+              <em><b>Aún sin valorar, <%= link_to "Ser el primero", new_profile_review_path(@profile) %></b></em>
+          <% end %>
+        </p>
+        <span><%= @profile.body %></span><br>
+        <table class="table">
+          <thead class="center">
+            <th class="center">Seguidores</th>
+            <th class="center">Pulicaciones</th>
+          </thead>
+
+          <tr class="center">
+            <td><%= @profile.follows.count %></td>
+            <td><%= @profile.posts.count %></td>
+          </tr>
+        </table>
+
       </div>
     </div>
   </div>  
 </div> 
 
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#tab1" aria-controls="profile" role="tab" data-toggle="tab">Publicaciones</a></li>
-    <li role="presentation"><a href="#tab2" aria-controls="messages" role="tab" data-toggle="tab"><%= @profile.offer_section_name %></a>
-    </li>
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" role="tablist">
+  <li role="presentation" class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">Publicaciones</a></li>
+  <li role="presentation"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab"><%= @profile.offer_section_name %></a>
+  </li>
 
-    <li role="presentation"><a href="#tab3" aria-controls="settings" role="tab" data-toggle="tab">Galería</a>
-    </li>
-  </ul>
-  <script>
-    $('.star-rating').raty({
-      readOnly: true,
-      score: function() {
-        return $(this).attr('data-score');
-      }
-    });
-  </script>
+  <li role="presentation"><a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab">Galería</a>
+  </li>
+</ul>
+<script>
+  $('.star-rating').raty({
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  });
+</script>
