--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
-  <h5>Dinos que te pareció <%= @profile.name %></h5>
+  <div class="page-header">
+  	<h3>Dinos que te pareció <%= @profile.name %></h3>
+  </div>
   <%= render 'form' %>
 </div>
