--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@post,@comment], remote: true) do |f| %>
+<%= simple_form_for([@post,@comment], remote: true) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -11,17 +11,6 @@
     </div>
   <% end %>
 
-<div class="row" style="margin-bottom: 0px">
-  <div class="col s9">
-    <%= f.text_area :body, placeholder:"Escribe tu comentario", class:"materialize-textarea", style:"
-    background:#F2F2F2;
-    padding-bottom: 0px;
-    margin-bottom: 0px;", id:"cform" %>
-  </div>
-  <div class="col s2">
-    <%= button_tag(type: 'submit', class: "btn-large green") do %>
-    <%= icon("paper-plane") %>
-    <% end %>
-  </div>
-</div>
+<%= f.input :body, label:false, placeholder:"Escribe tu comentario", as: :text%>
+<%= f.submit "Enviar", class:"btn btn-success" %>
 <% end %>
