--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,50 +1,36 @@
-<div class="container grey-text darken-4">
-<h5>Registrarse</h5>
-<% if session_path(resource) == "/users/sign_in" %>
-    <p>
-      <%= icon("exclamation-triangle") %> Crea una cuenta para tu negocio o empresa y muestra tus productos o
-      servicios a los usuarios de <b>Estelí Live</b>
-    </p>
+<div class="container">
+  <h5>Registrarse</h5>
+  <% if session_path(resource) == "/users/sign_in" %>
+  <p class="center">
+    <%= icon("exclamation-triangle") %> Crea una cuenta para tu negocio o empresa y muestra tus productos o
+    servicios a los usuarios de <b>Estelí Live</b>
+  </p>
   <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <% if session_path(resource) == "/clients/sign_in" %>
+  <div class="container">
     <div class="row">
-      <div class="col s6">
-        <%= f.label "Nombre" %><br />
-        <%= f.email_field :first_name, autofocus: true %>
-      </div>
-      <div class="col s6">
-        <%= f.label "Apellido" %><br />
-        <%= f.email_field :last_name %>
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <h1 class="text-center login-title">Crear una Cuenta</h1>
+        <div class="account-wall">
+          <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+          
+          <div class="form-signin">
+            <% unless session_path(resource) == "/users/sign_in" %>
+            <%= f.input :first_name, label: false, placeholder:"Nombre",autofocus: true, class:"form-control" %>
+            <%= f.input :last_name, label: false, placeholder:"Apellido",autofocus: true, class:"form-control" %>
+
+            <% end %>
+            <%= f.email_field :email, placeholder:"Correo", class:'form-control email' %>
+            <%= f.password_field :password, placeholder:"Contraseña", autocomplete: "off", class:'form-control password' %>
+
+            <%= f.submit 'Iniciar', class:"btn btn-lg btn-primary btn-block" %>
+          </div>
+
+          <% end %>
+        </div>
+        <%= render 'devise/shared/links' %>
       </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label "Email" %><br />
-    <%= f.email_field :email %>
   </div>
 
-  <div class="field">
-    <%= f.label "Contraseña"%>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label "Confirmar Contraseña" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Completar Registro", class:"btn-large teal darken-2"%>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
 </div>
