--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,12 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><%= link_to "Mi Perfil", myprofile_path %></li>
               <!-- Check for session -->
               <% if user_signed_in? %>
-              <li><%= link_to('Perfil', current_user.profile ) %></li>
+              <li><%= link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) %>  </li>
+              <li><a href="">Socios</a></li>
               <% elsif client_signed_in? %>
-              <li><%= link_to("Perfil", current_client.clientprofile) %></li>
               <li><a href="">Socios</a></li>
               <li><%= link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) %>  </li>
               <% else %>
