--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -4,7 +4,7 @@
         <div class="page-header"><h4>Anuncios Clasificados</h4></div>
 
         <div class="form-group">
-            <%= form_tag(profiles_path, method: "get", id: "search-form") do %>
+            <%= form_tag(items_path, method: "get", id: "search-form") do %>
             <b><em>¿Que desea encontrar?</em></b><br>
             <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"grey-text darken-4", style:"max-width: 60%;" %>
             <%= submit_tag "Buscar", class:"btn red" %>
