--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,11 +1,8 @@
-    <div class="row">
-      <% if client_signed_in? or user_signed_in? %>
-      <%= render '/comments/form' %>
-      <% else %>
-      <%= link_to "Inicia sesión", new_client_session_path %> para dejar un comentario
-      <% end %>
-    </div>
-    <b> <%= @post.comments.count %> Comentarios</b>
-    <% @post.comments.each do |comment| %>
-      <%= render partial:'/comments/comments', locals:{comment: comment} %>
-    <% end %>
+<%= post_comments(@post) %>
+<br>
+<p>
+	<b><em><%= @post.comments.count %> Comentarios</em></b>
+</p>
+<% @post.comments.each do |comment| %>
+<%= render partial:'/comments/comment', locals:{comment: comment} %>
+<% end %>
