--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,56 +1,12 @@
-<div id="modal1" class="modal" style="background-color: #4D4D4D;">
-  <div class="modal-content">
-  <%= form_for @post, :html => { :class => 'form-horizontal', multipart: true }, :authenticity_token => true do |f| %>
+<%= simple_form_for(@post, html: {multipart: true}) do |f| %>
+  <%= f.input :body, label:"Descripción", as: :text %>
+  <p>
+    <%= file_field_tag "images[]", type: :image, multiple: true %>
+  </p>
+  <p>
+    Agrega un video(Opcional)
+  </p>
+  <%= f.input :video, placeholder:"URL del video de YouTube" %>
 
-
-      <div class="row">
-        <div id="input_body" class="input-field col s12 white-text">
-          <%= f.text_area :body, id:"text_area_body", class:"materialize-textarea white-text", input_html: { hidden: true } %>
-          <label for="textarea1">Escribir publicación</label>
-        </div>
-      </div>
-
-      <div class="file-field input-field">
-      <div class="btn-large red">
-        <%= icon("picture-o") %>
-        <input type="file" multiple>
-             <%= file_field_tag "images[]", type: :image, multiple: true, input_html: { hidden: true }%>
-      </div>
-      <div class="file-path-wrapper">
-        <input class="file-path validate" type="text" placeholder="Seleccione uno o mas archivos">
-      </div>
-    </div>
-
-    <div class="input-field white-text">
-      <%= f.label :video, "Pega un video de youtube (opcional)" %>
-      <%= f.text_field :video %>
-    </div>
-
-  <div class="row right">
-    <%= button_tag(type: 'submit', id:"btn-post", remote: true, class: "btn blue") do %>
-      <%= icon("check") %>
-    <% end %>
-
-    <a href="#!" class=" modal-action modal-close btn red"><%= icon("ban") %></a>
-
-  </div>
-
+  <%= f.submit "Publicar", class:"btn btn-lg btn-success" %>
 <% end %>
-</div>
-</div>
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#btn-post').attr('disabled',true);
-
-    $('#text_area_body').keyup(function(){
-        if($(this).val().length !=0){
-            $('#btn-post').attr('disabled', false);
-        }
-        else
-        {
-            $('#btn-post').attr('disabled', true);
-        }
-    })
-  });
-</script>
