--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="height:430px;">
+<div class="row">
     <% if @promoved_profiles.present? %>
     <% @promoved_profiles.each do |profile| %>
     <div class="col-sm-6 col-md-4">
